--- a/register.html
+++ b/register.html
@@ -262,14 +262,17 @@
                     let nextNumber = 1; // Start from 1 if no existing members
                     if (existingMembers && existingMembers.length > 0) {
                         const lastMemberId = existingMembers[0].member_id;
-                        const lastNumber = parseInt(lastMemberId.replace('BTC', ''));
-                        nextNumber = lastNumber + 1;
+                        // Extract only the numeric part using regex
+                        const matches = lastMemberId.match(/BTC(\d+)/);
+                        if (matches && matches[1]) {
+                            nextNumber = parseInt(matches[1]) + 1;
+                        }
                     }
 
                     const member_id = `BTC${nextNumber.toString().padStart(3, '0')}`;
                     console.log('Generated Member ID:', member_id);
 
-                    // Create auth user
+                    // Create auth user with initial profile data
                     const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
@@ -279,41 +282,60 @@
                                 member_id: member_id,
                                 membership_type: 'standard',
                                 membership_status: 'pending',
-                                verification_token: verificationToken
+                                verification_token: verificationToken,
+                                token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
                             }
                         }
                     });
 
                     if (authError) throw authError;
 
+                    // Wait a moment for the profile to be created
+                    await new Promise(resolve => setTimeout(resolve, 1000));
+
+                    // Update the profile with verification token
+                    const { error: updateError } = await supabaseClient
+                        .from('profiles')
+                        .update({ 
+                            verification_token: verificationToken,
+                            token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
+                        })
+                        .eq('id', authData.user.id);
+
+                    if (updateError) {
+                        console.error('Profile update error:', updateError);
+                        throw new Error('Failed to store verification token');
+                    }
+
                     // Send verification email using FormSubmit
                     const verificationUrl = `${window.location.origin}/verify-email.html?token=${verificationToken}`;
-                    const formData = new FormData();
-                    formData.append('email', email);
-                    formData.append('_captcha', 'false');
-                    formData.append('_template', 'box');
-                    formData.append('_subject', 'Verify Your Blitz Tesla Club Membership');
-                    formData.append('_next', verificationUrl);
-                    formData.append('_url', verificationUrl);
-                    formData.append('message', `
-                        <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-                            <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
-                            <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
-                            <p>Your Member ID: ${member_id}</p>
-                            <p>Please click the button below to verify your email:</p>
-                            <div style="text-align: center; margin: 30px 0;">
-                                <a href="${verificationUrl}" 
-                                   style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
-                                    Verify Email Address
-                                </a>
+                    const formData = {
+                        email: email,
+                        _captcha: 'false',
+                        _template: 'box',
+                        _subject: 'Verify Your Blitz Tesla Club Membership',
+                        _next: verificationUrl,
+                        _url: verificationUrl,
+                        message: `
+                            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
+                                <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
+                                <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
+                                <p>Your Member ID: ${member_id}</p>
+                                <p>Please click the button below to verify your email:</p>
+                                <div style="text-align: center; margin: 30px 0;">
+                                    <a href="${verificationUrl}" 
+                                       style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
+                                        Verify Email Address
+                                    </a>
+                                </div>
+                                <p style="color: #666; font-size: 14px;">
+                                    If you can't click the button, copy and paste this URL into your browser:
+                                    <br>
+                                    ${verificationUrl}
+                                </p>
                             </div>
-                            <p style="color: #666; font-size: 14px;">
-                                If you can't click the button, copy and paste this URL into your browser:
-                                <br>
-                                ${verificationUrl}
-                            </p>
-                        </div>
-                    `);
+                        `
+                    };
 
                     console.log('Sending verification email...');
                     const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
@@ -321,7 +343,7 @@
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify(Object.fromEntries(formData))
+                        body: JSON.stringify(formData)
                     });
 
                     if (!emailResponse.ok) {
