--- a/register.html
+++ b/register.html
@@ -272,39 +272,40 @@
                     const member_id = `BTC${nextNumber.toString().padStart(3, '0')}`;
                     console.log('Generated Member ID:', member_id);
 
-                    // Create auth user with initial profile data
+                    // Create auth user first with minimal data
                     const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
                         options: {
                             data: {
-                                full_name: fullName,
-                                member_id: member_id,
-                                membership_type: 'standard',
-                                membership_status: 'pending',
-                                verification_token: verificationToken,
-                                token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
+                                full_name: fullName
                             }
                         }
                     });
 
                     if (authError) throw authError;
 
-                    // Wait a moment for the profile to be created
+                    // Wait a moment for the user to be created
                     await new Promise(resolve => setTimeout(resolve, 1000));
 
-                    // Update the profile with verification token
-                    const { error: updateError } = await supabaseClient
+                    // Now create/update the profile with all the additional data
+                    const { error: profileUpdateError } = await supabaseClient
                         .from('profiles')
                         .update({ 
+                            full_name: fullName,
+                            member_id: member_id,
+                            membership_type: 'standard',
+                            membership_status: 'pending',
                             verification_token: verificationToken,
                             token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
                         })
                         .eq('id', authData.user.id);
 
-                    if (updateError) {
-                        console.error('Profile update error:', updateError);
-                        throw new Error('Failed to store verification token');
+                    if (profileUpdateError) {
+                        console.error('Profile update error:', profileUpdateError);
+                        // If profile update fails, delete the auth user
+                        await supabaseClient.auth.admin.deleteUser(authData.user.id);
+                        throw new Error('Failed to create user profile');
                     }
 
                     // Send verification email using FormSubmit
@@ -348,19 +349,6 @@
 
                     if (!emailResponse.ok) {
                         throw new Error('Failed to send verification email');
-                    }
-
-                    // Store token in Supabase profile
-                    const { error: profileError } = await supabaseClient
-                        .from('profiles')
-                        .update({ 
-                            verification_token: verificationToken,
-                            token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
-                        })
-                        .eq('id', authData.user.id);
-
-                    if (profileError) {
-                        throw new Error('Failed to store verification token');
                     }
 
                     // Store verification data
