--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="executive.html">Executives</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="#join">Join Us</a></li>
+            <li><a href="register.html">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
