--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="nav.js"></script>
+    <script src="config.js"></script>
     <style>
         .gallery-grid {
             display: grid;
@@ -341,12 +342,9 @@
     </footer>
 
     <script>
-        // YouTube API Key
-        const YOUTUBE_API_KEY = 'AIzaSyDcJjWNyZQ9LSflpercckQrAMYKRyKx-3I';
-
         async function fetchVideoDetails(videoId) {
             try {
-                const response = await fetch(`https://www.googleapis.com/youtube/v3/videos?part=snippet,contentDetails&id=${videoId}&key=${YOUTUBE_API_KEY}`);
+                const response = await fetch(`https://www.googleapis.com/youtube/v3/videos?part=snippet,contentDetails&id=${videoId}&key=${config.YOUTUBE_API_KEY}`);
                 const data = await response.json();
                 
                 if (data.items && data.items.length > 0) {
