--- a/register.html
+++ b/register.html
@@ -163,6 +163,32 @@
             }
         });
 
+        // Add this before the DOMContentLoaded event listener
+        function showMessage(message, type = 'error') {
+            // Remove any existing message
+            const existingMessage = document.querySelector('.alert');
+            if (existingMessage) {
+                existingMessage.remove();
+            }
+
+            // Create new message element
+            const messageDiv = document.createElement('div');
+            messageDiv.className = `alert alert-${type}`;
+            messageDiv.innerHTML = `
+                <i class="fas ${type === 'success' ? 'fa-check-circle' : 'fa-exclamation-circle'}"></i>
+                <span>${message}</span>
+            `;
+
+            // Insert message before the form
+            const form = document.querySelector('.login-form');
+            form.parentNode.insertBefore(messageDiv, form);
+
+            // Remove message after 5 seconds
+            setTimeout(() => {
+                messageDiv.remove();
+            }, 5000);
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
             const registerForm = document.getElementById('registerForm');
             const passwordInput = document.getElementById('password');
@@ -263,7 +289,7 @@
                 return memberId;
             }
 
-            // Function to handle form submission
+            // Update the form submission handler
             registerForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
                 const submitButton = document.querySelector('.login-btn');
@@ -287,10 +313,7 @@
                         throw new Error('Passwords do not match');
                     }
 
-                    // Generate verification token
-                    const verificationToken = crypto.randomUUID();
-                    
-                    // First create the auth user
+                    // First create the auth user with minimal data
                     const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
@@ -310,6 +333,7 @@
                     const memberId = await generateSequentialMemberId();
 
                     // Update profile with member ID and verification token
+                    const verificationToken = crypto.randomUUID();
                     const { error: profileError } = await supabaseClient
                         .from('profiles')
                         .update({
@@ -322,7 +346,13 @@
 
                     if (profileError) {
                         console.error('Profile update error:', profileError);
-                        throw new Error('Failed to create user profile');
+                        // If profile update fails, try to clean up the auth user
+                        try {
+                            await supabaseClient.auth.signOut();
+                        } catch (error) {
+                            console.error('Error cleaning up failed registration:', error);
+                        }
+                        throw new Error('Failed to create user profile. Please try again.');
                     }
 
                     // Store verification data
@@ -341,7 +371,7 @@
                     console.error('Registration error:', error);
                     submitButton.disabled = false;
                     submitButton.innerHTML = '<i class="fas fa-user-plus"></i> Create Account';
-                    showMessage(error.message || 'Registration failed. Please try again.', 'error');
+                    showMessage(error.message || 'Registration failed. Please try again.');
                 }
             });
 
