--- a/register.html
+++ b/register.html
@@ -155,13 +155,7 @@
         const supabaseUrl = 'https://qhkcrrphsjpytdfqfamq.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI';
 
-        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey, {
-            auth: {
-                autoRefreshToken: true,
-                persistSession: true,
-                detectSessionInUrl: false
-            }
-        });
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
         // Add this before the DOMContentLoaded event listener
         function showMessage(message, type = 'error') {
@@ -313,46 +307,114 @@
                         throw new Error('Passwords do not match');
                     }
 
-                    // First create the auth user with minimal data
-                    const { data: authData, error: authError } = await supabaseClient.auth.signUp({
-                        email,
-                        password,
+                    // Step 1: Create auth user with minimal data
+                    const { data, error: signUpError } = await supabaseClient.auth.signUp({
+                        email: email,
+                        password: password,
                         options: {
-                            data: {
-                                full_name: fullName
-                            }
+                            emailRedirectTo: window.location.origin + '/verify-email.html'
                         }
                     });
 
-                    if (authError) throw authError;
+                    if (signUpError) {
+                        console.error('Signup error:', signUpError);
+                        throw new Error(signUpError.message);
+                    }
 
-                    // Wait for user creation
-                    await new Promise(resolve => setTimeout(resolve, 1000));
+                    if (!data?.user?.id) {
+                        throw new Error('User creation failed');
+                    }
 
-                    // Generate member ID
+                    console.log('User created successfully:', data.user.id);
+
+                    // Step 2: Generate member ID
                     const memberId = await generateSequentialMemberId();
+                    console.log('Generated member ID:', memberId);
 
-                    // Update profile with member ID and verification token
+                    // Step 3: Create initial profile
                     const verificationToken = crypto.randomUUID();
                     const { error: profileError } = await supabaseClient
                         .from('profiles')
-                        .update({
+                        .insert([{
+                            id: data.user.id,
                             full_name: fullName,
                             member_id: memberId,
                             membership_status: 'pending',
-                            verification_token: verificationToken
-                        })
-                        .eq('id', authData.user.id);
+                            verification_token: verificationToken,
+                            created_at: new Date().toISOString(),
+                            updated_at: new Date().toISOString()
+                        }]);
 
                     if (profileError) {
-                        console.error('Profile update error:', profileError);
-                        // If profile update fails, try to clean up the auth user
+                        console.error('Profile creation error:', profileError);
+                        // Clean up the auth user if profile creation fails
                         try {
                             await supabaseClient.auth.signOut();
-                        } catch (error) {
-                            console.error('Error cleaning up failed registration:', error);
+                        } catch (cleanupError) {
+                            console.error('Error cleaning up failed registration:', cleanupError);
                         }
                         throw new Error('Failed to create user profile. Please try again.');
+                    }
+
+                    // Step 4: Send verification email
+                    console.log('Sending verification email...');
+                    const verificationUrl = `${window.location.origin}/verify-email.html?token=${verificationToken}`;
+                    const formData = {
+                        email: email,
+                        _captcha: 'false',
+                        _template: 'box',
+                        _subject: 'Verify Your Blitz Tesla Club Membership',
+                        _replyto: email,
+                        message: `
+                            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
+                                <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
+                                <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
+                                <p style="text-align: center; color: #666;">Thank you for joining Blitz Tesla Club!</p>
+                                <p style="text-align: center; margin: 20px 0;">
+                                    <strong>Your Member ID:</strong> ${memberId}
+                                </p>
+                                <p style="text-align: center; color: #666;">Please verify your email address to activate your membership:</p>
+                                <div style="text-align: center; margin: 30px 0;">
+                                    <a href="${verificationUrl}" 
+                                       style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
+                                        Verify Email Address
+                                    </a>
+                                </div>
+                                <p style="color: #666; font-size: 14px; text-align: center;">
+                                    If you can't click the button, copy and paste this URL into your browser:
+                                    <br>
+                                    <span style="color: #171a20;">${verificationUrl}</span>
+                                </p>
+                                <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #eee;">
+                                    <p style="color: #666; font-size: 14px;">
+                                        This email was sent by Blitz Tesla Club
+                                        <br>
+                                        If you didn't register for an account, please ignore this email.
+                                    </p>
+                                </div>
+                            </div>
+                        `
+                    };
+
+                    try {
+                        const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify(formData)
+                        });
+
+                        if (!emailResponse.ok) {
+                            console.error('Failed to send verification email:', await emailResponse.text());
+                            throw new Error('Failed to send verification email');
+                        }
+
+                        console.log('Verification email sent successfully');
+                    } catch (emailError) {
+                        console.error('Error sending verification email:', emailError);
+                        // Don't throw here, as the user is already created
+                        showMessage('Account created, but there was an issue sending the verification email. Please contact support.', 'warning');
                     }
 
                     // Store verification data
