--- a/register.html
+++ b/register.html
@@ -153,9 +153,14 @@
 
         // Initialize Supabase client
         const supabaseUrl = 'https://qhkcrrphsjpytdfqfamq.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTczNDMyNDg3OCwiZXhwIjoyMDQ5OTAwODc4fQ.A6ltvW5H0Hr8mnTAlesPHyCa6STI9IoSg9ZVgzsSzdw';
 
-        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey, {
+            auth: {
+                autoRefreshToken: true,
+                persistSession: true
+            }
+        });
 
         // Add this before the DOMContentLoaded event listener
         function showMessage(message, type = 'error') {
@@ -307,123 +312,38 @@
                         throw new Error('Passwords do not match');
                     }
 
-                    // Step 1: Create auth user with minimal data
-                    const { data, error: signUpError } = await supabaseClient.auth.signUp({
-                        email: email,
-                        password: password,
-                        options: {
-                            emailRedirectTo: window.location.origin + '/verify-email.html'
-                        }
-                    });
-
-                    if (signUpError) {
-                        console.error('Signup error:', signUpError);
-                        throw new Error(signUpError.message);
-                    }
-
-                    if (!data?.user?.id) {
-                        throw new Error('User creation failed');
-                    }
-
-                    console.log('User created successfully:', data.user.id);
-
-                    // Step 2: Generate member ID
+                    // Generate member ID
                     const memberId = await generateSequentialMemberId();
                     console.log('Generated member ID:', memberId);
 
-                    // Step 3: Create initial profile
-                    const verificationToken = crypto.randomUUID();
-                    const { error: profileError } = await supabaseClient
-                        .from('profiles')
-                        .insert([{
-                            id: data.user.id,
-                            full_name: fullName,
-                            member_id: memberId,
-                            membership_status: 'pending',
-                            verification_token: verificationToken,
-                            created_at: new Date().toISOString(),
-                            updated_at: new Date().toISOString()
-                        }]);
+                    // Send registration request to server
+                    const response = await fetch('https://blitztclub.com/api/register', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            email,
+                            password,
+                            fullName,
+                            memberId
+                        })
+                    });
 
-                    if (profileError) {
-                        console.error('Profile creation error:', profileError);
-                        // Clean up the auth user if profile creation fails
-                        try {
-                            await supabaseClient.auth.signOut();
-                        } catch (cleanupError) {
-                            console.error('Error cleaning up failed registration:', cleanupError);
-                        }
-                        throw new Error('Failed to create user profile. Please try again.');
+                    if (!response.ok) {
+                        const errorData = await response.json();
+                        throw new Error(errorData.error || 'Registration failed');
                     }
 
-                    // Step 4: Send verification email
-                    console.log('Sending verification email...');
-                    const verificationUrl = `${window.location.origin}/verify-email.html?token=${verificationToken}`;
-                    const formData = {
-                        email: email,
-                        _captcha: 'false',
-                        _template: 'box',
-                        _subject: 'Verify Your Blitz Tesla Club Membership',
-                        _replyto: email,
-                        message: `
-                            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-                                <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
-                                <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
-                                <p style="text-align: center; color: #666;">Thank you for joining Blitz Tesla Club!</p>
-                                <p style="text-align: center; margin: 20px 0;">
-                                    <strong>Your Member ID:</strong> ${memberId}
-                                </p>
-                                <p style="text-align: center; color: #666;">Please verify your email address to activate your membership:</p>
-                                <div style="text-align: center; margin: 30px 0;">
-                                    <a href="${verificationUrl}" 
-                                       style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
-                                        Verify Email Address
-                                    </a>
-                                </div>
-                                <p style="color: #666; font-size: 14px; text-align: center;">
-                                    If you can't click the button, copy and paste this URL into your browser:
-                                    <br>
-                                    <span style="color: #171a20;">${verificationUrl}</span>
-                                </p>
-                                <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 1px solid #eee;">
-                                    <p style="color: #666; font-size: 14px;">
-                                        This email was sent by Blitz Tesla Club
-                                        <br>
-                                        If you didn't register for an account, please ignore this email.
-                                    </p>
-                                </div>
-                            </div>
-                        `
-                    };
+                    const data = await response.json();
+                    console.log('Registration successful:', data);
 
-                    try {
-                        const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
-                            },
-                            body: JSON.stringify(formData)
-                        });
-
-                        if (!emailResponse.ok) {
-                            console.error('Failed to send verification email:', await emailResponse.text());
-                            throw new Error('Failed to send verification email');
-                        }
-
-                        console.log('Verification email sent successfully');
-                    } catch (emailError) {
-                        console.error('Error sending verification email:', emailError);
-                        // Don't throw here, as the user is already created
-                        showMessage('Account created, but there was an issue sending the verification email. Please contact support.', 'warning');
-                    }
-
-                    // Store verification data
+                    // Store registration data
                     localStorage.setItem('pendingVerificationEmail', email);
-                    localStorage.setItem('verificationToken', verificationToken);
                     localStorage.setItem('pendingMemberId', memberId);
                     localStorage.setItem('registrationTime', new Date().toISOString());
 
-                    // Show success message and redirect
+                    // Show success message
                     showMessage('Registration successful! Please check your email to verify your account.', 'success');
                     setTimeout(() => {
                         window.location.href = 'verify-email.html';
