--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
             }
             
             // Production URL
-            return 'https://blitzteslaclub.com/dashboard.html';
+            return `${window.location.origin}/dashboard.html`;
         }
 
         // Function to show messages
