--- a/register.html
+++ b/register.html
@@ -357,12 +357,13 @@
                     const verificationToken = crypto.randomUUID();
                     console.log('Generated verification token');
 
-                    // Store verification token in profile
+                    // Store token in database and localStorage
+                    const tokenExpiry = new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString(); // 24 hours
                     const { error: tokenError } = await supabaseClient
                         .from('profiles')
-                        .update({ 
+                        .update({
                             verification_token: verificationToken,
-                            token_expires_at: new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString() // 24 hours
+                            token_expires_at: tokenExpiry
                         })
                         .eq('id', data.user.id);
 
@@ -370,6 +371,13 @@
                         console.error('Error storing verification token:', tokenError);
                         throw tokenError;
                     }
+
+                    // Store token in localStorage as backup
+                    localStorage.setItem('verificationToken', verificationToken);
+                    localStorage.setItem('tokenExpiry', tokenExpiry);
+                    localStorage.setItem('pendingVerificationEmail', email);
+                    localStorage.setItem('pendingMemberId', memberId);
+                    localStorage.setItem('registrationTime', new Date().toISOString());
 
                     // Get base URL for verification link
                     const baseUrl = window.location.hostname === 'localhost' 
@@ -383,39 +391,35 @@
                     formData.append('_captcha', 'false');
                     formData.append('_template', 'box');
                     formData.append('_subject', 'Verify Your Blitz Tesla Club Membership');
-                    formData.append('_cc', 'info@blitztclub.com');
-                    formData.append('message', `
-                        <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
-                            <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
-                            <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
-                            <p>Your Member ID: ${memberId}</p>
-                            <p>Please click the button below to verify your email and activate your membership:</p>
-                            <div style="text-align: center; margin: 30px 0;">
-                                <a href="${verificationUrl}" 
-                                   style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
-                                    Verify Email Address
-                                </a>
-                            </div>
-                            <p>Next Steps:</p>
-                            <ol>
-                                <li>Click the verification link above</li>
-                                <li>Your membership will be activated instantly</li>
-                                <li>Access your digital membership card</li>
-                                <li>Start enjoying member benefits</li>
-                            </ol>
-                            <p style="color: #666; font-size: 14px;">
-                                If you can't click the button, copy and paste this URL into your browser:
-                                <br>
-                                ${verificationUrl}
-                            </p>
-                            <p style="color: #666; font-size: 12px; margin-top: 30px;">
-                                If you didn't request this email, please ignore it.
-                            </p>
-                        </div>
-                    `);
+                    formData.append('_autoresponse', 'Thank you for verifying your email. Your Blitz Tesla Club membership will be activated shortly.');
+                    formData.append('message', `Welcome to Blitz Tesla Club!
+
+Member ID: ${memberId}
+
+Please click the link below to verify your email and activate your membership:
+${verificationUrl}
+
+Important Notes:
+- This verification link will expire in 24 hours
+- Please verify on the same device you're currently using
+- After verification, your membership will be activated instantly
+
+Next Steps:
+1. Click the verification link above
+2. Your membership will be activated instantly
+3. Access your digital membership card
+4. Start enjoying member benefits
+
+If you can't click the link, copy and paste this URL into your browser:
+${verificationUrl}
+
+If you didn't request this email, please ignore it.
+
+Best regards,
+Blitz Tesla Club Team`);
 
                     // Send the verification email
-                    const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
+                    const emailResponse = await fetch(`https://formsubmit.co/ajax/${email}`, {
                         method: 'POST',
                         headers: {
                             'Accept': 'application/json'
@@ -424,19 +428,12 @@
                     });
 
                     if (!emailResponse.ok) {
-                        console.error('Error sending verification email:', await emailResponse.text());
+                        const responseText = await emailResponse.text();
+                        console.error('FormSubmit response:', responseText);
                         throw new Error('Failed to send verification email');
                     }
 
-                    console.log('Verification email sent successfully');
-
-                    // Store verification data in localStorage
-                    localStorage.setItem('pendingVerificationEmail', email);
-                    localStorage.setItem('verificationToken', verificationToken);
-                    localStorage.setItem('pendingMemberId', memberId);
-                    localStorage.setItem('registrationTime', new Date().toISOString());
-
-                    // Redirect to verification page
+                    // Redirect to verification sent page
                     window.location.href = 'verification-sent.html';
                 } catch (error) {
                     console.error('Registration error:', error);
